Updates frontend resizing to fix issue where canvas was becoming blurry.

--- a/docs/css/london.css
+++ b/docs/css/london.css
@@ -6,6 +6,4 @@ body {
 
 canvas[fullscreen] {
     display: block;
-    width: 100%;
-    height: 100%;
 }
